--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,16 @@
     "tests"
   ],
   "dependencies": {
-    "paper-card": "PolymerElements/paper-card#~1.0.8"
+    "paper-card": "PolymerElements/paper-card#~1.0.8",
+    "paper-button": "PolymerElements/paper-button#~1.0.8",
+    "paper-input": "PolymerElements/paper-input#~1.1.1",
+    "iron-ajax": "PolymerElements/iron-ajax#~1.1.1",
+    "firebase-element": "GoogleWebComponents/firebase-element#~1.0.8",
+    "paper-header-panel": "PolymerElements/paper-header-panel#~1.0.5",
+    "paper-toolbar": "PolymerElements/paper-toolbar#~1.1.1",
+    "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.5",
+    "iron-icons": "PolymerElements/iron-icons#~1.0.5",
+    "paper-tooltip": "PolymerElements/paper-tooltip#~1.1.1",
+    "font-roboto": "PolymerElements/font-roboto#~1.0.1"
   }
 }
