--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
     "firebase": "^2.3.2",
-    "mosca": "^0.32.1"
+    "mosca": "^0.32.1",
+    "mqtt": "^1.6.0",
   }
 }
