--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "body-parser": "^1.14.1",
     "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
-    "firebase": "^2.3.2"
+    "firebase": "^2.3.2",
+    "parse": "^1.6.13",
+    "request": "^2.67.0"
   }
 }
