--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Personal webpage @ m25lazi.herokuapp.com",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node arduino.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
