--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node arduino.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "bower install"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
   "homepage": "https://github.com/m25lazi/mlazim-me#readme",
   "dependencies": {
     "body-parser": "^1.14.1",
+    "bower": "^1.7.2",
     "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
     "firebase": "^2.3.2",
