--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,7 @@
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.5",
     "paper-input": "PolymerElements/paper-input#~1.1.1",
     "paper-toolbar": "PolymerElements/paper-toolbar#~1.1.1",
-    "paper-tooltip": "PolymerElements/paper-tooltip#~1.1.1"
+    "paper-tooltip": "PolymerElements/paper-tooltip#~1.1.1",
+    "paper-toast": "PolymerElements/paper-toast#~1.1.1"
   }
 }
