--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "paper-input": "PolymerElements/paper-input#~1.1.1",
     "paper-toolbar": "PolymerElements/paper-toolbar#~1.1.1",
     "paper-tooltip": "PolymerElements/paper-tooltip#~1.1.1",
-    "paper-toast": "PolymerElements/paper-toast#~1.1.1"
+    "paper-toast": "PolymerElements/paper-toast#~1.1.1",
+    "paper-spinner": "PolymerElements/paper-spinner#~1.1.0"
   }
 }
